# todomvc

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json  postCreateCommand.sh
assets/: helpers.js  index.html
src/: components.rs  lib.rs  main.rs  models.rs  repository.rs
templates/components/panel/: delete_completed_button.html  toggle_completed_button.html
templates/components/tabs/: counter.html  header.html
templates/components/todo/: item.html  item_edit.html  table.html
templates/responses/: create_todo.html  delete_todo.html  edit_todo.html  index.html  list_todos.html  update_todo.html
tests/: tests.rs
