[package]
name = "todomvc"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "todomvc"

[dependencies]
dioxus = { version = "0.4.0" }
dioxus-ssr = { version = "0.4.0" }
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "0.14", features = ["full"] }
scraper = "0.17.1"
